apps/servarr/whisparr/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whisparr
spec:
  gatewayClassName: whisparr
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: whisparr-i-shikanime-studio-tls
            group: ""
            kind: Secret
