apps/servarr/whisparr/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr-redirect
spec:
  hostnames:
      - whisparr.i.shikanime.studio
  parentRefs:
    - name: whisparr
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
