apps/servarr/whisparr/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr
spec:
  hostnames:
    - whisparr.i.shikanime.studio
  parentRefs:
    - name: whisparr
      sectionName: https
  rules:
    - backendRefs:
        - name: whisparr
          port: http
