apps/servarr/whisparr/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr
spec:
  hostnames:
    - whisparr.taila659a.ts.net
    - whisparr.taila659a.ts.net
  parentRefs:
    - name: whisparr
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr-redirect
spec:
  hostnames:
    - whisparr.taila659a.ts.net
    - whisparr.taila659a.ts.net
  parentRefs:
    - name: whisparr
      sectionName: http
